--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css"
     />
-    <title>FedEm</title>
+    <title>FedEmAt</title>
   </head>
   <body style="overflow: hidden; height: 100vh">
     <noscript>
